# study_opencv

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
